fix: method graph